# memmgr

./: CMakeLists.txt  INSTALL  README  memmgrConfig.cmake  pkg-config.pc.cmake
cmake/: platform.cmake
documentation/: example.c  helloworld.c  index.html  memmgr.html  xpl.html
include/: CMakeChecks.txt  CMakeLists.txt  memmgr-config.h.in  memmgr-config.wh  memmgr.h  nmutil.h  xpl.h  xplauth.h  xpldefs.h  xplerr.h  xplold.h  xplproc.h  xplprocess.h  xplservice.h  xplsockaddr.h  xplthread.h  xpltypes.h  xplutil-assert.h.in  xplutil-assert.wh  xplutil.h  xplwrap.h
src/: CMakeLists.txt
src/memmgr/: CMakeLists.txt  MAKEINIT  iobuf.c  memmgrp.h  slab.c  str.c  thread.c  xplmain.c
src/xpl/: CMakeLists.txt  MAKEINIT  XGetopt.c  auth.c  cfgfile.c  ctypes.c  design-xplproc.txt  dir.c  elf.c  elf.h  err.c  fsys.c  mem.c  proc.c  process.c  processp.h  procp.h  procunix.c  procwin.c  rwlock.c  wrap.c  xplalarm.c  xplalarmtest.c  xpllog.c
